<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_final_wrapped"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_album_cover"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/top_song_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/top_artists_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/top_songs_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_album_cover">

        <TextView
            android:id="@+id/top_artists_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/top_artists_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_artist_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_one"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_artist_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_two"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_artist_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_three"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_artist_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_four"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_artist_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_five"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <!-- Repeat the above TextViews for other artists -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_songs_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/top_artists_layout"
        app:layout_constraintTop_toBottomOf="@+id/top_album_cover">

        <TextView
            android:id="@+id/top_songs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/top_songs_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_song_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_one"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_song_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_two"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_song_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_three"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_song_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_four"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/top_song_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/top_artist_five"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <!-- Repeat the above TextViews for other songs -->

    </LinearLayout>

    <TextView
        android:id="@+id/wraplify_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="wraplify"
        android:alpha="0.5"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="11dp"
        android:text=">"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rec_artist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/urbanist_regular"
        android:text="looking for more? check out..."
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_artists_layout" />

    <TextView
        android:id="@+id/recArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/urbanist_bolditalic"
        android:text="recArtist"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_artist_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
